--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "0.19.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.0",
-    "react-testing-library": "7.0.0"
+    "react-testing-library": "7.0.0",
+    "react-use": "13.2.1",
+    "uuid": "3.3.3"
   },
   "devDependencies": {},
   "scripts": {
