--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "react-hooks-examples",
   "version": "1.0.0",
-  "description": "",
+  "description": "React hooks examples including testing, custom hooks, react testing library, mocking and more",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "axios": "0.19.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.0.0",
-    "react-testing-library": "7.0.0",
-    "react-use": "13.2.1",
-    "uuid": "3.3.3"
+    "@material-ui/core": "4.9.14",
+    "@testing-library/dom": "7.5.7",
+    "@testing-library/jest-dom": "5.8.0",
+    "@testing-library/react": "10.0.4",
+    "@testing-library/react-hooks": "3.2.1",
+    "axios": "0.19.2",
+    "immer": "6.0.6",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1",
+    "react-test-renderer": "16.13.1",
+    "react-testing-library": "8.0.1",
+    "react-use": "15.1.0",
+    "typeface-roboto": "0.0.75",
+    "uuid": "8.1.0"
   },
   "devDependencies": {},
   "scripts": {
