--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@material-ui/core": "4.11.0",
     "axios": "0.19.2",
+    "cookie": "^0.4.1",
     "immer": "7.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-query": "^2.23.0",
     "react-scripts": "3.4.1",
     "react-test-renderer": "16.13.1",
     "react-use": "15.3.2",
@@ -17,7 +19,7 @@
     "uuid": "8.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "10.4.3",
     "@testing-library/react-hooks": "3.3.0"
   },
