--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.11.0",
-    "axios": "0.19.2",
+    "axios": "0.20.0",
     "cookie": "^0.4.1",
-    "immer": "7.0.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-query": "^2.23.0",
-    "react-scripts": "3.4.1",
-    "react-test-renderer": "16.13.1",
-    "react-use": "15.3.2",
-    "typeface-roboto": "0.0.75",
-    "uuid": "8.2.0"
+    "immer": "7.0.9",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-query": "^2.23.1",
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "16.14.0",
+    "react-use": "15.3.4",
+    "typeface-roboto": "1.1.13",
+    "uuid": "8.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "10.4.3",
-    "@testing-library/react-hooks": "3.3.0"
+    "@testing-library/react": "11.1.0",
+    "@testing-library/react-hooks": "3.4.2",
+    "miragejs": "^0.1.41"
   },
   "scripts": {
     "start": "react-scripts start",
