--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-query": "^2.23.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "3.4.1",
     "react-test-renderer": "16.14.0",
     "react-use": "15.3.4",
     "typeface-roboto": "1.1.13",
@@ -25,7 +25,7 @@
     "miragejs": "^0.1.41"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER='Brave' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
